larger update people and research

--- a/about.Rmd
+++ b/about.Rmd
@@ -9,8 +9,8 @@ title: "Markus Stetter"
 
   
 ## Research experience
-- From 2019 Group leader - Botanical Institute, University of Cologne, Germany  
-  [Stetter lab](https://www.cropevolution.org/)  
+- Since 2024 Professor - Institute for Plant Sciences, University of Cologne, Germany   
+- 2019 - 2023 Group leader - Botanical Institute, University of Cologne, Germany   
 - 2017 -2019 Postdoc - Department of Plant Sciences, University of California Davis, USA  
     [Ross-Ibarra lab](http://rilab.org)
 - 11/2016 - 01/2017 Research Associate - Crop Biodiversity and Breeding Informatics, University of Hohenheim, Germany  
