--- a/reading.Rmd
+++ b/reading.Rmd
@@ -4,9 +4,9 @@ title: "What we read"
 &nbsp;
 
 C.R.O.P is our weekly journal club for anyone interested in evolution. 
-We meet on Tuesday at 4.00 pm at [Theatercafe Filmdose](https://goo.gl/maps/mamsnSV5ZqThF4YY8) for an open discussion about the weekly paper in a relaxed atmosphere. 
+We meet on Tuesday at 4.15 pm at [Theatercafe Filmdose](https://goo.gl/maps/mamsnSV5ZqThF4YY8) for an open discussion about the weekly paper in a relaxed atmosphere. 
 
-**Until further notice we will meet in the seminar room on the 4th floor of the Biocenter**
+**Until further notice we will meet in the seminar room on the 3rd floor of the Biocenter**
 
 Anybody is welcome to join us.
 The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
