updates and CROP

--- a/contact.Rmd
+++ b/contact.Rmd
@@ -3,11 +3,11 @@ title: "Contact Us"
 ---
 
 
-**Dr. Markus Stetter**   
+**Markus Stetter**   
 
 University of Cologne  
 Crop Evolution  
-Botanical Institute  
+Institute for Plant Sciences 
 Biozentrum  
 Zülpicher Str. 47b  
 50674 Cologne/Germany  
