--- a/reading.Rmd
+++ b/reading.Rmd
@@ -13,6 +13,13 @@ The idea is that everyone reads the paper before and we dive directly in without
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
 
+### October
+
+#### Tuesday October 1
+[Li, preprint](https://www.biorxiv.org/content/10.1101/2024.09.19.613351v1) 
+The utility of environmental data from traditional varieties for climate-adaptive maize breeding
+
+
 ### September
 
 #### Tuesday September 24
