--- a/reading.Rmd
+++ b/reading.Rmd
@@ -12,13 +12,24 @@ Anybody is welcome to join us.
 The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
-### December
+### January
 
-#### December December 17
+#### Tuesday Janaury 28
+[Groh et al, 2024](https://www.science.org/doi/10.1126/science.ado5578) 
+Ancient structural variants control sex-specific flowering time morphs in walnuts and hickories
+
+#### Tuesday Janaury 21
+TRR 341 Seminar
+
+#### Tuesday Janaury 14
 [Ramos-Madrigal et al, 2024](https://www.cell.com/cell/abstract/S0092-8674(24)01277-7) 
 The genomic origin of early maize in eastern North America
 
-#### December December 3
+## 2024
+
+### December
+
+#### Tuesday December 3
 [Burgarella et al, 2024](https://academic.oup.com/evlett/advance-article/doi/10.1093/evlett/qrae039/7731525?login=false) 
 Mating systems and recombination landscape strongly shape genetic diversity and selection in wheat relatives
 
