--- a/reading.Rmd
+++ b/reading.Rmd
@@ -14,6 +14,9 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 
 ### April
+#### Tuesday April 29
+[Gompert et al, 2025](https://www.science.org/doi/abs/10.1126/science.adp3745) 
+Adaptation repeatedly uses complex structural genomic variation
 
 #### Tuesday April 22
 Easter break
