--- a/reading.Rmd
+++ b/reading.Rmd
@@ -24,7 +24,7 @@ Summer break
 Rapid adaptation and extinction across climates in synchronized outdoor evolution experiments of Arabidopsis thaliana
 
 #### Tuesday July 22
-[Zebell, et al, 2025]https://www.nature.com/articles/s41586-025-09243-0) 
+[Zebell, et al, 2025](https://www.nature.com/articles/s41586-025-09243-0) 
 Cryptic variation fuels plant phenotypic change through hierarchical epistasis
 
 
