--- a/about.Rmd
+++ b/about.Rmd
@@ -12,7 +12,7 @@ title: "Markus Stetter"
 - Since 2024 Professor - Institute for Plant Sciences, University of Cologne, Germany   
 - 2019 - 2023 Group leader - Botanical Institute, University of Cologne, Germany   
 - 2017 -2019 Postdoc - Department of Plant Sciences, University of California Davis, USA  
-    [Ross-Ibarra lab](http://rilab.org)
+    [Ross-Ibarra lab](https://rilab.ucdavis.edu/)
 - 11/2016 - 01/2017 Research Associate - Crop Biodiversity and Breeding Informatics, University of Hohenheim, Germany  
     [Schmid lab](http://evoplant.uni-hohenheim.de)
 - 2013 - 2016 PhD student - Crop Biodiversity and Breeding Informatics, University of Hohenheim, Germany   
